--- a/Joint Land Page/index.html
+++ b/Joint Land Page/index.html
@@ -14,7 +14,7 @@
 	<a class="disc l3">
 		<div>671489F</div>
 	</a>
-	<a class="disc l4" href=">
+	<a class="disc l4" href="Joint Land Page/rush.html">
 		<div>266940J</div>
 	</a>
 	<a class="disc l5 toggle">
