--- a/Joint Land Page/index.html
+++ b/Joint Land Page/index.html
@@ -11,7 +11,7 @@
 <!-- partial:index.partial.html -->
 <nav class="top-right open">
 	
-	<a class="disc l3">
+	<a class="disc l3" href="https://notditto.github.io/The-Promise/index.html">
 		<div>671489F</div>
 	</a>
 	<a class="disc l4" href="https://olutoyintayo.github.io/mywork/rush.html">
